--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.31.1",
+    "@astrojs/vercel": "^8.0.6",
     "@fontsource/ibm-plex-serif": "^5.1.1",
+    "@vercel/analytics": "^1.4.1",
     "astro": "^5.1.5",
     "sharp": "^0.32.5"
   }
