--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.3.1",
     "@astrojs/starlight": "^0.34.0",
     "@astrojs/vercel": "^8.1.3",
     "@fontsource/ibm-plex-serif": "^5.1.1",
